# bender_study

./: .gitignore  .profile  .zenodo.json  README.md  pyproject.toml  setup.cfg  setup.py
jupyter/: plot_behav.ipynb  plot_react_sem.ipynb  plot_react_stats.ipynb  plot_schematic.ipynb  plot_semantics.ipynb  plot_sme_stats.ipynb
matlab/bender/: bender_bar_simple.m  bender_colors.m  bender_item_integ_corr.m  bender_load_data.m  bender_load_rdms.m  bender_react_corr_stats.m  bender_roi_rdms.m  bender_roi_react_corr.m  bender_roi_react_stats.m  bender_test_rt.m  bender_tests.m  bender_trial_models.m  plot_pattern.m  print_behav.m  print_item_cat_react.m  print_item_cat_react_sme.m  print_item_integ_corr.m  print_item_react_corr.m  print_item_react_sme.m  print_schematic_rdms.m  react_rdm_stats.m  robust_reg_rows.m  roi_corr_stats.m  roi_model_corr_trial.m  run_reactigrate.m  testfun.m  ttest_tab.m
matlab/pat/: cat_data.m  combine_run_data.m  cond_subset.m  get_subj_dirs.m  isunique.m  read_cr_score.m  size_data.m  sort_data.m  sort_period_data.m
src/bender_study/: bender.py  events.py  figures.py  gvt.py  mvpa.py  patio.py  rsa.py  sim_model.py  sim_rdm_react.py  sim_react.py  subjutil.py  task.py  traintest.py
src/bender_study/cmap/: intersect.cmap
src/bender_study/style/: figures.mplstyle
