[project]
name = "bender_study"
description = "Bender Study: Behavioral and neural analysis of overlapping pair learning."
version = "0.1.0"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Neal W Morton", email = "mortonne@gmail.com"},
    {name = "Ellen L Zippi", email = "ellenzippi@gmail.com"},
]
keywords = ["fmri", "psychology", "neuroscience", "memory"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent"
]
urls = {project = "https://github.com/prestonlab/bender_study"}
dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "matplotlib",
    "seaborn",
    "h5py",
    "watermark",
    "ezlaunch",
    "mindstorm",
    "pingouin",
    "click",
]

[project.scripts]
bender-convert-model = "bender_study.rsa:convert_model"

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
