[metadata]
name = bender_study
version = 0.1.0
url = https://github.com/prestonlab/bender_study
author = Neal Morton
author_email = mortonne@gmail.com
description = Bender Study: Initial analysis of the Bender study phase.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = psychology, neuroscience
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    scipy
    pandas
    matplotlib
    watermark
    ezlaunch
package_dir =
    = src
packages = find:

[options.packages.find]
where = src
